atualiza slides da aula 2

--- a/slides/s2/03/03.tex
+++ b/slides/s2/03/03.tex
@@ -1,6 +1,10 @@
+% aula 3 - Código Limpo: Nomenclatura, Formatação e Estrutura
+
 \documentclass[aspectratio=169]{beamer}
 \UseRawInputEncoding
 \usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+
 \usepackage[brazil]{babel}
 \usepackage{listings}
 \usepackage{xcolor}
@@ -412,16 +416,7 @@ Código limpo não é escrito de uma vez. É refinado continuamente.
     \item \textbf{Ferramentas:} Utilize analisadores estáticos (próxima aula)
 \end{enumerate}
 
-\vspace{0.5cm}
-\begin{block}{Para a Próxima Aula}
-\begin{itemize}
-    \item Leitura: Capítulo sobre Code Smells
-    \item Exercício: Identificar code smells em projeto pessoal
-    \item Ferramenta: Instalar SonarQube/PMD
-\end{itemize}
-\end{block}
-
-\vspace{0.5cm}
+\vspace{1.5cm}
 \begin{center}
 \textbf{Dúvidas?}
 \end{center}
@@ -448,4 +443,3 @@ Obrigado pela atenção!\\
 \end{frame}
 
 \end{document}
-
