atualiza slides com instruções iniciais para o projeto

--- a/slides/projeto/entrega-u1/instrucoes-iniciais.tex
+++ b/slides/projeto/entrega-u1/instrucoes-iniciais.tex
@@ -3,83 +3,568 @@
 \usepackage[T1]{fontenc}
 \usepackage[brazilian]{babel}
 \usepackage{tikz}
-\usetikzlibrary{shapes.geometric, arrows, positioning}
+\usetikzlibrary{shapes.geometric, arrows, positioning, matrix}
 \usepackage{amssymb}
+\usepackage{xcolor}
 \usetheme{Madrid}
+\usepackage{pifont}
 
 \title{Boas Práticas de Programação (2025.2)}
-\subtitle{Orientações para a Primeira Entrega - Unidade 1}
+\subtitle{Planejamento Estratégico de Projeto com Princípios Ágeis}
 \author{Prof. Fernando Figueira}
 \institute{DIMAp - UFRN}
 \date{Setembro de 2025}
+
+% Definindo estilos personalizados
+\tikzset{
+    process/.style = {rectangle, rounded corners, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=blue!20},
+    priority1/.style = {rectangle, rounded corners, minimum width=8cm, minimum height=0.8cm, text centered, draw=black, fill=green!30},
+    priority2/.style = {rectangle, rounded corners, minimum width=8cm, minimum height=0.8cm, text centered, draw=black, fill=yellow!30},
+    priority3/.style = {rectangle, rounded corners, minimum width=8cm, minimum height=0.8cm, text centered, draw=black, fill=orange!30},
+    arrow/.style = {thick,->,>=stealth}
+}
 
 \begin{document}
 
 \frame{\titlepage}
 
-\begin{frame}{Objetivo da Unidade 1}
+% Slide 1 - Overview do Planejamento
+\begin{frame}{Por que Planejamento Estratégico?}
+\begin{columns}[c]
+\column{0.5\textwidth}
 \begin{itemize}
-    \item Definir a visão do produto.
-    \item Estruturar o backlog priorizado.
-    \item Escolher a stack tecnológica.
-    \item Preparar a entrega via SIGAA.
+    \item \textbf{Foco no Valor}: Resolver problemas reais
+    \item \textbf{Gestão de Escopo}: Evitar feature creep
+    \item \textbf{Entrega Incremental}: Feedback constante
+    \item \textbf{Aprendizado Ágil}: Adaptar baseado em evidências
 \end{itemize}
-\end{frame}
 
-\begin{frame}{Elementos da Visão do Produto}
-\begin{itemize}
-    \item Propósito e objetivos.
-    \item Usuários-alvo.
-    \item Valor proposto.
-    \item Diferenciação.
-    \item Escopo do MVP.
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Exemplo de Visão do Produto}
+\column{0.5\textwidth}
 \centering
-\begin{tikzpicture}
-    \node[draw, fill=blue!10, rounded corners, text width=8cm, align=left] {
-        \textbf{Sistema de Gestão de Tarefas Pessoais} \\
-        - Propósito: Ajudar usuários a organizarem tarefas do dia a dia. \\
-        - Usuários: Pessoas que buscam produtividade. \\
-        - Valor: Simplicidade e eficiência. \\
-        - Diferenciação: Interface limpa e notificações inteligentes. \\
-        - MVP: Criar, listar e marcar tarefas como concluídas.
-    };
+\begin{tikzpicture}[scale=0.7]
+    \draw[fill=blue!20] (0,0) circle (2cm) node {\textbf{Seu Projeto}};
+    \draw[fill=green!20] (-1.5,1.5) circle (0.8cm) node[font=\tiny] {Valor};
+    \draw[fill=yellow!20] (1.5,1.5) circle (0.8cm) node[font=\tiny] {Escopo};
+    \draw[fill=orange!20] (1.5,-1.5) circle (0.8cm) node[font=\tiny] {Tempo};
+    \draw[fill=red!20] (-1.5,-1.5) circle (0.8cm) node[font=\tiny] {Qualidade};
+\end{tikzpicture}
+\end{columns}
+\end{frame}
+
+% Slide 2 - Visão do Produto com Template
+\begin{frame}{Visão do Produto: Template Prático}
+\begin{block}{Template da Visão}
+\textbf{Para} [usuários-alvo] \\
+\textbf{Que} [problema/necessidade] \\
+\textbf{O} [nome do produto] \textbf{é um} [categoria] \\
+\textbf{Que} [benefício principal] \\
+\textbf{Diferente de} [alternativa existente] \\
+\textbf{Nosso produto} [diferencial único]
+\end{block}
+
+\vspace{0.3cm}
+\begin{exampleblock}{Checklist da Visão}
+\small
+\checkmark\ Define usuário-alvo específico \\
+\checkmark\ Identifica problema concreto \\
+\checkmark\ Explicita valor único \\
+\checkmark\ É inspiradora mas realista \\
+\checkmark\ Cabe no escopo acadêmico
+\end{exampleblock}
+\end{frame}
+
+% Slide 3 - Exemplo de Visão
+\begin{frame}{Exemplo: Visão do Produto}
+\begin{alertblock}{Sistema de Controle de Gastos Universitário}
+\textbf{Para} estudantes universitários \\
+\textbf{Que} têm dificuldade em controlar gastos mensais \\
+\textbf{O} UniBudget \textbf{é uma} aplicação de controle financeiro \\
+\textbf{Que} permite registro rápido e visualização de padrões \\
+\textbf{Diferente de} apps complexos como Mobills \\
+\textbf{Nosso produto} foca na simplicidade e contexto estudantil
+\end{alertblock}
+
+\vspace{0.3cm}
+\begin{itemize}
+    \item \textbf{Usuário}: Específico e bem definido
+    \item \textbf{Problema}: Concreto e relevante
+    \item \textbf{Diferencial}: Simplicidade + contexto
+\end{itemize}
+\end{frame}
+
+
+
+% Slide 5 - Framework de MVP
+\begin{frame}{Framework para Definir MVP}
+\begin{block}{1. Problema Core}
+Qual o \textbf{principal} problema que seu produto resolve?
+\end{block}
+
+\begin{block}{2. Hipótese de Valor}
+"Acreditamos que [usuários] vão [comportamento] porque [benefício]"
+\end{block}
+
+\begin{block}{3. Métricas de Sucesso}
+Como você saberá se funcionou?
+\end{block}
+
+\vspace{0.3cm}
+\begin{exampleblock}{Exemplo - Sistema de Biblioteca}
+\textbf{Problema}: Estudantes perdem tempo procurando livros \\
+\textbf{Hipótese}: Vão consultar antes de ir à biblioteca \\
+\textbf{Métrica}: Redução de idas "em vão" à biblioteca
+\end{exampleblock}
+\end{frame}
+
+% Slide 6 - Técnica MoSCoW
+\begin{frame}{Técnica MoSCoW para Definir Escopo}
+\centering
+\begin{tikzpicture}[scale=0.9]
+    \node[priority1, text width=7cm] at (0,0) {\textbf{Must Have} - Essencial para o MVP};
+    \node[priority2, text width=7cm] at (0,-1) {\textbf{Should Have} - Importante, versão 2.0};
+    \node[priority3, text width=7cm] at (0,-2) {\textbf{Could Have} - Desejável, backlog futuro};
+    \node[draw, fill=red!20, rounded corners, minimum width=7cm, minimum height=0.8cm, text centered] at (0,-3) {\textbf{Won't Have} - Explicitamente excluído};
+\end{tikzpicture}
+
+\vspace{0.5cm}
+\textbf{Dica}: Se você tem dúvidas se algo é Must/Should, provavelmente é Should!
+\end{frame}
+
+% Slide 7 - Exemplo MoSCoW Aplicado
+\begin{frame}{Exemplo: MoSCoW - Sistema de Biblioteca}
+\begin{columns}[t]
+\column{0.48\textwidth}
+\textbf{Must Have (MVP)}
+\begin{itemize}
+    \item Cadastrar livro
+    \item Listar livros
+    \item Busca simples
+    \item Marcar emprestado/disponível
+\end{itemize}
+
+\textbf{Should Have (v2.0)}
+\begin{itemize}
+    \item Filtros avançados
+    \item Histórico de empréstimos
+    \item Dados do usuário
+\end{itemize}
+
+\column{0.48\textwidth}
+\textbf{Could Have}
+\begin{itemize}
+    \item Sistema de reservas
+    \item Notificações
+    \item Estatísticas
+    \item API externa
+\end{itemize}
+
+\textbf{Won't Have}
+\begin{itemize}
+    \item Pagamentos de multa
+    \item Integração com biblioteca física
+    \item App mobile
+\end{itemize}
+\end{columns}
+\end{frame}
+
+% Slide 8 - Backlog Estruturado
+\begin{frame}{Product Backlog: Organização Prática}
+\textbf{Estrutura de cada item:}
+\begin{center}
+[Prioridade] + [User Story] + [Critérios] + [Estimativa]
+\end{center}
+
+\vspace{0.3cm}
+\textbf{User Story Template:}
+\begin{alertblock}{}
+Como [tipo de usuário], quero [funcionalidade] para [benefício]\\
+Exemplo: "Como estudante, quero buscar livros por autor para encontrar obras específicas rapidamente"
+\end{alertblock}
+
+\vspace{0.3cm}
+\textbf{Critérios de Aceitação:}
+\begin{itemize}
+    \item Condições que a funcionalidade deve atender
+    \item Cenários de teste implícitos
+    \item Definição clara de "pronto"
+\end{itemize}
+\end{frame}
+
+% Slide 9 - Exemplo Completo de Backlog
+\begin{frame}{Exemplo: Backlog Completo}
+\scriptsize
+\begin{tabular}{|c|p{5cm}|p{3cm}|c|}
+\hline
+\textbf{Pri} & \textbf{User Story} & \textbf{Critérios de Aceitação} & \textbf{Est} \\
+\hline
+P1 & Como estudante, quero cadastrar uma nova tarefa para não esquecer & - Campos: título, descrição, data\newline - Validação obrigatórios\newline - Mensagem de confirmação & 4h \\
+\hline
+P1 & Como estudante, quero ver todas as tarefas para ter visão geral & - Lista ordenada por data\newline - Indicador de urgência\newline - Máximo 50 por tela & 3h \\
+\hline
+P2 & Como estudante, quero filtrar por status para focar no importante & - Filtros: todas, pendentes, feitas\newline - Filtro persiste na sessão & 2h \\
+\hline
+\end{tabular}
+
+\vspace{0.2cm}
+\textbf{Observe}: User stories focam no valor, não na implementação!
+\end{frame}
+
+% Slide 10 - Técnicas de Priorização
+\begin{frame}{Matriz Valor x Esforço para Priorização}
+\centering
+\begin{tikzpicture}[scale=1.1]
+    % Eixos
+    \draw[thick,->] (0,0) -- (5,0) node[right] {Esforço};
+    \draw[thick,->] (0,0) -- (0,4) node[above] {Valor};
+    
+    % Quadrantes
+    \fill[green!20] (0,2) rectangle (2.5,4);
+    \fill[yellow!20] (2.5,2) rectangle (5,4);
+    \fill[blue!20] (0,0) rectangle (2.5,2);
+    \fill[red!20] (2.5,0) rectangle (5,2);
+    
+    % Labels dos quadrantes
+    \node[text width=2cm, align=center] at (1.25,3) {\textbf{FAÇA\\PRIMEIRO}\\\small P1};
+    \node[text width=2cm, align=center] at (3.75,3) {\textbf{PLANEJE\\BEM}\\\small P2};
+    \node[text width=2cm, align=center] at (1.25,1) {\textbf{SE SOBRAR\\TEMPO}\\\small P3};
+    \node[text width=2cm, align=center] at (3.75,1) {\textbf{NÃO FAÇA\\(agora)}\\\small Won't};
+    
+    % Exemplos
+    \node[fill=white, circle, draw] at (1,3.5) {\tiny Login};
+    \node[fill=white, circle, draw] at (4,3.5) {\tiny API};
+    \node[fill=white, circle, draw] at (1,0.5) {\tiny Log};
+    \node[fill=white, circle, draw] at (4,0.5) {\tiny IA};
 \end{tikzpicture}
 \end{frame}
 
-\begin{frame}{Backlog Priorizado}
-\centering
-\begin{tabular}{|c|l|}
-\hline
-\textbf{Prioridade} & \textbf{Funcionalidade} \\
-\hline
-Alta & Cadastrar tarefa \\
-Alta & Listar tarefas \\
-Média & Marcar tarefa como concluída \\
-Baixa & Editar tarefa \\
-\hline
-\end{tabular}
+
+% Slide 12 - Cronograma Detalhado
+\begin{frame}{Cronograma: Setembro 2025 (Unidade 1)}
+\scriptsize
+\begin{tikzpicture}[scale=0.85]
+    % Semanas
+    \draw[fill=blue!10] (0,3) rectangle (2.5,4) node[midway, font=\tiny] {Sem 1: Setup};
+    \draw[fill=green!20] (2.7,3) rectangle (5.2,4) node[midway, font=\tiny] {Sem 2: Sprint 1};
+    \draw[fill=green!20] (5.4,3) rectangle (7.9,4) node[midway, font=\tiny] {Sem 3: Sprint 2};
+    \draw[fill=yellow!20] (8.1,3) rectangle (10.6,4) node[midway, font=\tiny] {Sem 4: Sprint 3};
+    \draw[fill=red!20] (10.8,3) rectangle (13.3,4) node[midway, font=\tiny] {Sem 5: Entrega};
+    
+    % Atividades detalhadas
+    \node[below, font=\tiny, text width=2.3cm, align=center] at (1.25,3) {
+        • Visão do produto\\
+        • Backlog inicial\\
+        • Setup ambiente
+    };
+    \node[below, font=\tiny, text width=2.3cm, align=center] at (3.95,3) {
+        • Funcionalidades P1\\
+        • Primeira versão\\
+        • Testes básicos
+    };
+    \node[below, font=\tiny, text width=2.3cm, align=center] at (6.65,3) {
+        • Completar P1\\
+        • Tratamento erros\\
+        • Melhorar UX
+    };
+    \node[below, font=\tiny, text width=2.3cm, align=center] at (9.35,3) {
+        • Funcionalidades P2\\
+        • Refatoração\\
+        • Documentação
+    };
+    \node[below, font=\tiny, text width=2.3cm, align=center] at (12.05,3) {
+        • Vídeo\\
+        • Revisão docs\\
+        • Upload SIGAA
+    };
+\end{tikzpicture}
+\normalsize
+
+\vspace{0.3cm}
+\textbf{Entrega}: 02/10/2025 até 23:59
 \end{frame}
 
-\begin{frame}{Preparação para Entrega}
+% Slide 13 - Definition of Done
+\begin{frame}{Definition of Done (DoD) Progressivo}
+\begin{columns}[t]
+\column{0.32\textwidth}
+\textbf{Sprint 1}
 \begin{itemize}
-    \item Documentos em PDF.
-    \item Vídeo de 5–8 minutos.
-    \item Nomes de arquivos padronizados.
-    \item Entrega via SIGAA até 02/10/2025.
+    \item Funcionalidade implementada
+    \item Código compila
+    \item Teste manual OK
+    \item Commit descritivo
 \end{itemize}
+
+\column{0.32\textwidth}
+\textbf{Sprint 2}
+\begin{itemize}
+    \item Tudo do Sprint 1 +
+    \item Tratamento de erros
+    \item Código comentado
+    \item Refatoração inicial
+\end{itemize}
+
+\column{0.32\textwidth}
+\textbf{Sprint 3}
+\begin{itemize}
+    \item Tudo do Sprint 2 +
+    \item Testes automatizados
+    \item Documentação completa
+    \item Code review próprio
+\end{itemize}
+\end{columns}
+
+\vspace{0.5cm}
+\begin{alertblock}{Dica}
+DoD evolui ao longo do projeto. Comece simples e melhore gradualmente!
+\end{alertblock}
 \end{frame}
 
+% Slide 14 - Ferramentas Práticas
+\begin{frame}{Ferramentas para Gestão do Projeto}
+\begin{columns}[c]
+\column{0.5\textwidth}
+\textbf{Gestão de Backlog:}
+\begin{itemize}
+    \item \textbf{Trello}: Visual e simples
+    \item \textbf{GitHub Projects}: Integrado com código
+    \item \textbf{Notion}: Robusto para docs
+    \item \textbf{Google Sheets}: Rápido de usar
+\end{itemize}
+
+\textbf{Controle de Versão:}
+\begin{itemize}
+    \item Commits frequentes
+    \item Mensagens descritivas
+    \item Branches por feature
+\end{itemize}
+
+\column{0.5\textwidth}
+\textbf{Estrutura de Commits:}
+\begin{block}{Exemplo de commit}
+\texttt{git commit -m "[TIPO] Descrição"}
+
+\vspace{0.2cm}
+\textbf{Tipos:}
+\begin{itemize}
+    \item \texttt{FEAT}: nova funcionalidade
+    \item \texttt{FIX}: correção de bug
+    \item \texttt{DOCS}: documentação
+    \item \texttt{REFACTOR}: refatoração
+    \item \texttt{TEST}: testes
+\end{itemize}
+\end{block}
+\end{columns}
+\end{frame}
+
+% Slide 15 - Estrutura de Projeto
+\begin{frame}{Estrutura de Pastas Recomendada}
+\begin{columns}[c]
+\column{0.5\textwidth}
+\begin{block}{Estrutura Básica}
+\texttt{projeto/}\\
+\texttt{|-- src/} \hfill \textit{Código fonte}\\
+\texttt{|-- tests/} \hfill \textit{Testes}\\
+\texttt{|-- docs/} \hfill \textit{Documentação}\\
+\texttt{|-- README.md} \hfill \textit{Visão geral}\\
+\texttt{|-- CHANGELOG.md} \hfill \textit{Mudanças}
+\end{block}
+
+\column{0.5\textwidth}
+\textbf{README.md essencial:}
+\begin{itemize}
+    \item Título do projeto
+    \item Descrição breve
+    \item Como instalar/executar
+    \item Como usar
+    \item Estrutura do código
+    \item Autor e contato
+\end{itemize}
+\end{columns}
+
+\vspace{0.3cm}
+\begin{alertblock}{Dica}
+README é o cartão de visitas do seu projeto. Invista tempo nele!
+\end{alertblock}
+\end{frame}
+
+
+
+% Slide 17 - Sinais de Bom Projeto
+\begin{frame}{Sinais de um Bom Projeto}
+\begin{columns}[c]
+\column{0.5\textwidth}
+\textbf{Sinais Positivos:}
+\begin{itemize}
+    \item \checkmark\ Explica o valor em 30s
+    \item \checkmark\ MVP pode ser usado por alguém real
+    \item \checkmark\ Você está animado para desenvolvê-lo
+    \item \checkmark\ Escopo é realista para o tempo
+\end{itemize}
+
+\column{0.5\textwidth}
+\textbf{Sinais de atenção:}
+\begin{itemize}
+    \item \ding{55}\ MVP muito complexo
+    \item \ding{55}\ Foco na tecnologia, não no usuário
+    \item \ding{55}\ Backlog com 50+ itens
+    \item \ding{55}\ Problema vago ou inexistente
+\end{itemize}
+\end{columns}
+
+\vspace{0.5cm}
+\begin{alertblock}{Lembre-se}
+Melhor um projeto simples bem executado que um complexo pela metade!
+\end{alertblock}
+\end{frame}
+
+% Slide 18 - Erros Comuns
+\begin{frame}{Erros Comuns a Evitar}
+\begin{enumerate}
+    \item \textbf{MVP muito ambicioso}
+    \begin{itemize}
+        \item[\ding{55}] "Sistema completo de e-commerce"
+        \item[\checkmark] "Catálogo simples com carrinho básico"
+    \end{itemize}
+    
+    \item \textbf{Foco na tecnologia}
+    \begin{itemize}
+        \item[\ding{55}] "Quero usar React, Node, MongoDB..."
+        \item[\checkmark] "Como resolver o problema do usuário?"
+    \end{itemize}
+    
+    \item \textbf{Backlog estático}
+    \begin{itemize}
+        \item[\ding{55}] "Planejei tudo, não vou mudar"
+        \item[\checkmark] "Vou adaptar conforme aprendo"
+    \end{itemize}
+\end{enumerate}
+
+\vspace{0.3cm}
+\textbf{Mantra}: Ação e feedback são mais valiosos que planejamento excessivo
+\end{frame}
+
+% Slide 19 - Recursos de Apoio
+\begin{frame}{Recursos de Apoio Disponíveis}
+\textbf{Durante o Desenvolvimento:}
+\begin{itemize}
+    \item \textbf{Atendimentos}: Segundas 14h-16h (online) é bom?
+    \item \textbf{Fórum da Disciplina}: Dúvidas técnicas e conceituais
+    \item \textbf{GitHub do Curso}: Templates e exemplos
+    \item \textbf{Material Complementar}: Artigos sobre MVP e backlog
+\end{itemize}
+
+\vspace{0.3cm}
+\textbf{Templates Disponíveis:}
+\begin{itemize}
+    \item Documento de Visão do Produto
+    \item Planilha de Product Backlog
+    \item Estrutura de README.md
+    \item Checklist de Definition of Done
+\end{itemize}
+
+\vspace{0.3cm}
+\begin{alertblock}{Importante}
+Não hesite em buscar ajuda! Melhor esclarecer dúvidas cedo que descobrir problemas na entrega.
+\end{alertblock}
+\end{frame}
+
+% Slide 20 - Preparação da Entrega
+\begin{frame}{Preparação da Entrega Final}
+\textbf{Documentos Obrigatórios:}
+\begin{itemize}
+    \item Visão do Produto (PDF, 2-3 páginas)
+    \item Product Backlog (PDF ou planilha)
+    \item Vídeo de apresentação (5-8 minutos)
+\end{itemize}
+
+\vspace{0.3cm}
+\textbf{Estrutura do Vídeo:}
+\begin{itemize}
+    \item \textbf{Min 1-2}: Problema e visão do produto
+    \item \textbf{Min 3-4}: Demonstração do MVP planejado
+    \item \textbf{Min 5-6}: Backlog e priorização
+    \item \textbf{Min 7-8}: Stack tecnológica e próximos passos
+\end{itemize}
+
+\vspace{0.3cm}
+\textbf{Formato dos Arquivos:}
+\texttt{[TipoDoc]\_[NomeProjeto]\_[NomeAluno].pdf}
+\end{frame}
+
+% Slide 21 - Checklist Final
+\begin{frame}{Checklist Final da Entrega}
+\begin{columns}[t]
+\column{0.5\textwidth}
+\textbf{Antes de Enviar:}
+\begin{itemize}
+    \item Todos os arquivos no formato correto
+    \item Links de vídeo acessíveis
+    \item Documentos autoexplicativos
+    \item Nomes seguem o padrão
+    \item ZIP dentro do limite de tamanho
+\end{itemize}
+
+\column{0.5\textwidth}
+\textbf{Autovaliação:}
+\begin{itemize}
+    \item Visão é clara e inspiradora
+    \item MVP é realista e valioso
+    \item Backlog está bem priorizado
+    \item Vídeo comunica bem a ideia
+    \item Estou orgulhoso do resultado
+\end{itemize}
+\end{columns}
+
+\vspace{0.5cm}
+\begin{block}{Entrega}
+\textbf{SIGAA - Tarefa "Entrega U1"}\\
+\textbf{Deadline}: 02/10/2025 até 23:59\\
+\textbf{Formato}: ZIP único com todos os arquivos
+\end{block}
+\end{frame}
+
+% Slide 22 - Próximos Passos
 \begin{frame}{Próximos Passos}
+\textbf{Esta Semana (02-08/09):}
 \begin{itemize}
-    \item Escolher a linguagem e ferramentas.
-    \item Configurar repositório Git.
-    \item Iniciar desenvolvimento incremental.
-    \item Buscar ajuda nas aulas de dúvidas.
+    \item Definir o problema que quer resolver
+    \item Aplicar o template de visão do produto
+    \item Criar backlog inicial com 10-15 itens
+    \item Configurar ambiente de desenvolvimento
 \end{itemize}
+
+\vspace{0.3cm}
+\textbf{Próxima Semana (09-15/09):}
+\begin{itemize}
+    \item Iniciar Sprint 1 com funcionalidades P1
+    \item Setup do repositório Git
+    \item Primeira versão funcional (mesmo simples)
+    \item Buscar feedback de colegas
+\end{itemize}
+
+\vspace{0.3cm}
+\textbf{Lembre-se}: O objetivo é aprender aplicando conceitos ágeis, não criar o projeto perfeito!
+\end{frame}
+
+% Slide Final
+\begin{frame}{Valeu e Bom Trabalho!}
+\centering
+\begin{tikzpicture}
+    \node[draw, fill=blue!10, rounded corners, minimum width=10cm, minimum height=4cm, text width=9cm, align=center] {
+        \Large\textbf{O projeto é uma oportunidade de:}\\
+        
+        \vspace{0.5cm}
+        
+        Aplicar conceitos do curso na prática\\
+        Aprender com feedback e iteração\\
+        Desenvolver algo que você(s) tem orgulho\\
+        
+        \vspace{0.5cm}
+    };
+\end{tikzpicture}
+
+\vspace{0.5cm}
+\textbf{Dúvidas?} fernando@dimap.ufrn.br
 \end{frame}
 
 \end{document}
